# scraper-bot

./: .bandit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.override.yaml  docker-compose.yaml  logger.yaml  pyproject.toml  setup.py
.github/workflows/: build-container.yml  code-quality.yml  publish-container.yml  release.yml  test-code.yml
bot_scraper/: __init__.py  __main__.py
bot_scraper/bot_scraper/: __init__.py  _bot_scraper.py  _task.py  bot_scraper.py  task.py
bot_scraper/cache/: __init__.py  _cache.py
bot_scraper/scraper/: _scraper.py
scraper_bot/: __init__.py  __main__.py  _version.py  config.schema.json  exceptions.py  logger.yaml
scraper_bot/bot/: __init__.py  _bot.py
scraper_bot/cache/: __init__.py  _cache.py  cache.py  disk_cache.py  dummy_cache.py  exceptions.py  maker.py  redis_cache.py
scraper_bot/logging/: __init__.py  logging.py
scraper_bot/notifications/: __init__.py  notifications.py
scraper_bot/scraper/: __init__.py  _scraper.py  browser_manager.py  exceptions.py  scraper.py  scraper_task.py  scraper_task_result.py  scraper_task_result_entity.py
scraper_bot/scraper_bot/: __init__.py  _config_schema.py  _scraper_bot.py  _task.py  scraper_bot.py
scraper_bot/settings/: browser.py  notifications.py  settings.py  task.py
scraper_bot/utilities/: AppriseURI.py  apprise_uri.py  disk_cache_dsn.py
