[tool.poetry]
name = "scraper-bot"
version = "0.dev"
description = "A telegram bot to stay tuned on real estate ads"
authors = ["Roberto Bochet <r@robertobochet.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/RobertoBochet/bot-scraper.git"
packages = [{ include = "scraper_bot" }]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Typing :: Typed"
]


[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
termcolor = "^2.4.0"
apprise = "^1.8.0"
jinja2 = "^3.1.4"
playwright = "^1.44.0"
playwright-stealth = "^1.0.6"
setuptools = "^70.1.1"
aiolimiter = "^1.1.0"
black = "^24.4.2"
diskcache = "^5.6.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.scripts]
scraper-bot = 'scraper_bot.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".git", ".mypy_cache", ".pytest_cache", ".tox", "venv", "tests", "dist", "build"]
skips = ["B113"]

[tool.pytest.ini_options]
addopts = "--order-dependencies --order-scope=session"
